[BUG] Fix  in the code specifying its maxHeight according to the location of block_comments - Move commentsStyle , setCommentsStyle and changeCommentStyle ( it's name is changed to changeCommentsStyle)to Comments from Frame so Delete commentsStyle and setCommentsStyle from Comments property - Modify changeCommentsStyle to set maxHeight of Comments - Delete #block_comments,.overHeight selector from _comment.scss instead Add overflow-y to #block_comments selector

--- a/src/assests/_comment.scss
+++ b/src/assests/_comment.scss
@@ -91,16 +91,13 @@
   z-index: 20;
   padding-bottom: 0;
   @include popupMenu;
-  
+  overflow-y: scroll;
   .comments_comments {
     width: 100%;
     margin: 0;
     padding-bottom:0 ;
   }
 } 
-#block_comments.overHeight{
-  overflow-y: scroll;
-}
 .pageComment {
   position: relative;
   .comments{
